Displays answers. Fix to word wrap. Minor css adjustments

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -28,7 +28,6 @@
   flex-direction: row;
   border-bottom:2px solid #e4e6e8;
   overflow: hidden;
-  white-space: nowrap;
   text-overflow: ellipsis;
   word-wrap: break-word;
   &.side{
@@ -46,7 +45,6 @@
 .sub-header-content > h2{
   font-weight: normal;
   padding: 28px 0 14px 0;
-  white-space: nowrap;
   text-overflow: ellipsis;
   word-wrap: break-word;
   width:65%;
